[package]
name = "baseplug"
version = "0.1.0"
authors = ["William Light <git@wrl.lhiaudio.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

vst = "0.2"

[dev-dependencies]
packed_simd = "0.3"

[dependencies.baseplug-derive]
path = "baseplug-derive"

[[example]]
name = "gain"
crate-type = ["cdylib"]

[[example]]
name = "svf"
crate-type = ["cdylib"]
