[package]
name = "baseplug-derive"
version = "0.1.0"
authors = ["William Light <git@wrl.lhiaudio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["default", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
ringbuf = "0.2"